--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -55,27 +55,28 @@
   </header>
   <main>
     <div id="hero">
-      <span id="hero"></span>Welcome to the town of Flipton, Ohio.
+      <span id="hero"></span><h3>Welcome to the town of Flipton, Ohio.</h3>
       <img class="banner" src="images/hero.jpg" alt="hero">
     </div>
     <div id="event">
       <img class="banner" src="images/event.jpg" alt="event">
-        <span id="event"></span> Upcoming Events<br>
         <br>
         Join us at the community center on
         March 25th for the fun walk.  The walk
         begins at noon.  
     </div>
     <div id="weather">
-        <span id="weather"></span>Todays Weather<br>
+        <span id="weather"><h3>Todays Weather</h3><br>
+        <br>
         Temperature 23°F
         Windspeed
         9 MPH
     </div>
-    <div id="news">
-      <span id="news"></span><h3>News</h3>
-      Join us for the cherry pie bake off?<br>
-      Sunday March 26th @ 2pm</h3>
+    <div class="news">
+      <span id="news"><h3>News</h3>
+      <br>
+      <p>Join us for the cherry pie bake off?<br>
+      Sunday March 26th @ 2pm.</p>
     </div>
     <div id="join">
       <button class="call-to-action">Join Flipton</button>
@@ -84,13 +85,13 @@
       <img class="banner" src="images/beach.jpg" alt="join photo">
     </div>
     <div id="spotlight1">
-        <span id="one"><p>Fire Safety Awareness</p><span>
+        <span id="one"><p>Fire Safety Awareness</p>
             <img src="images/view.jpg" alt="forest" class="center"></div>
     <div id="spotlight2">
-        <span id="two"><p>DMV Registration</p><span></span>
+        <span id="two"><p>DMV Registration</p>
         <img src="images/art.jpg" alt="dmv" class="center"></div>
     <div id="spotlight3">
-        <span id="three"><p>Apply for a permit</p><span>
+        <span id="three"><p>Apply for a permit</p>
         <img src="images/thankyou.jpg" alt="thankyou" class="center"></div>
   </main>
   <footer class="footer">
