--- a/chamber/join.html
+++ b/chamber/join.html
@@ -81,7 +81,8 @@
       <ul>
         <li>
         Flipton Chamber of Commerce<br>           
-        552 Flipton Way | Flipton Ohio, 44103<br>
+        552 Flipton Way<br>
+        Flipton Ohio, 44103<br>
         fliptonchamber.org<br>
         216-867-5309<br>
         <br>
