--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -55,7 +55,7 @@
   </header>
   <main>
     <div id="hero">
-      <span id="hero"></span><h3>Welcome to the town of Flipton, Ohio.</h3>
+      <span id="hero"></span>Welcome to the town of Flipton, Ohio.</h3>
       <img class="banner" src="images/hero.jpg" alt="hero">
     </div>
     <div id="event">
