--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -73,10 +73,10 @@
         9 MPH
     </div>
     <div class="news">
-      <span id="news"><h3>News</h3>
+      <span id="news"><h3>News</h3><br>
       <br>
-      <p>Join us for the cherry pie bake off?<br>
-      Sunday March 26th @ 2pm.</p>
+      <p>Join us for the cherry pie bake off?</p>
+      Sunday, March 26th @ 2pm.</p>
     </div>
     <div id="join">
       <button class="call-to-action">Join Flipton</button>
