--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -1,118 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Seth Markle">
-    <meta name="description" content="chamber page for wdd 230">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="../chamber/images/favicon.ico">
-    <link rel="stylesheet" href="../chamber/styles/normalize.css">
-    <link rel="stylesheet" href="../chamber/styles/small.css">
-    <link rel="stylesheet" href="../chamber/styles/medium.css">
-    <link rel="stylesheet" href="../chamber/styles/large.css">
-    <title>Flipton Chamber of Commerce</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Seth Markle">
+  <meta name="description" content="chamber page for wdd 230">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;display=swap" rel="stylesheet">
+  <link rel="icon" href="../chamber/images/favicon.ico">
+  <link rel="stylesheet" href="../chamber/styles/normalize.css">
+  <link rel="stylesheet" href="../chamber/styles/small.css">
+  <link rel="stylesheet" href="../chamber/styles/medium.css">
+  <link rel="stylesheet" href="../chamber/styles/large.css">
+  <title>Flipton Chamber of Commerce</title>
 </head>
-<header>
-    <div class="main-logo">
-      <img src="images/index.png" alt="logo">
-      <section>
+<body>
+  <header>
+    <div class="header-grid">
+      <div class="header-img-div">
+        <img src="images/index.png" alt="chamber logo">
         <h1>Flipton Chamber of Commerce</h1>
-      </section>
+      </div>
+      <div class="social">
+        <a href="https://facebook.com" target="_blank"><img class="social-logo" src="images/fb.png" alt="fb icon"></a> <a href="https://www.linkedin.com/" target="_blank"><img class="social-logo" src="images/linkdin.jpg" alt="in icon"></a>
+      </div>
+      <div>
+        <button id="hamburgerBtn"><span>☰</span><span>X</span></button>
+      </div>
+      <div id="datebox">
+        <p id="p1"></p>
+        <script>
+                var date = new Date();
+                document.getElementById("p1").innerHTML = date;
+        </script>
+      </div>
+      <nav>
+        <ul id="primaryNav">
+          <li>
+            <a href="/chamber/chamber.html">Home</a>
+          </li>
+          <li>
+            <a href="/chamber/directory.html">Directory</a>
+          </li>
+          <li>
+            <a href="/chamber/discover.html">Discover</a>
+          </li>
+          <li>
+            <a href="/chamber/join.html">Join</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header-date"></div>
     </div>
-    <div class="social">
-      <a href="https://facebook.com" target="_blank"><img src="images/fb.png" alt="fb icon"></a> <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkdin.jpg" alt="in icon"></a>
-    </div>
-    <div id="datebox">
-      <p id="p1"></p>
-      <script>
-              var date = new Date();
-              document.getElementById("p1").innerHTML = date;
-      </script>
-    </div>
-    <nav>
-      <ul class="navigation">
-        <li>
-          <a id="menu"></a>
-        </li>
-        <li>
-          <a href="../chamber/chamber.html">Home</a>
-        </li>
-        <li>
-          <a href="../chamber/discover.html">Discover</a>
-        </li>
-        <li>
-          <a href="../chamber/directory.html">Directory</a>
-        </li>
-        <li>
-          <a href="../chamber/join.html">Join</a>
-        </li>
-      </ul>
-    </nav>
   </header>
-  <main>
-    <div id="hero">
-      <span id="hero"></span>Welcome to the town of Flipton, Ohio.</h3>
-      <img class="banner" src="images/hero.jpg" alt="hero">
+  <main class="home-grid">
+    <div class="hero">
+      <img src="images/wdd230-org.jpg" alt="wdd230-org">
+      <div class="join-button">
+        <a href="join.html">Join the Chamber</a>
+      </div>
     </div>
-    <div id="event">
-      <img class="banner" src="images/event.jpg" alt="event">
-        <br>
-        Join us at the community center on
-        March 25th for the fun walk.  The walk
-        begins at noon.  
-    </div>
-    <div id="weather">
-        <span id="weather"><h3>Todays Weather</h3><br>
-        <br>
-        Temperature 23°F
-        Windspeed
-        9 MPH
-    </div>
-    <div class="news">
-      <span id="news"><h3>News</h3><br>
-      <br>
-      <p>Join us for the cherry pie bake off?</p>
-      Sunday, March 26th @ 2pm.</p>
-    </div>
-    <div id="join">
-      <button class="call-to-action">Join Flipton</button>
-      <h3>Join the Flipton Chamber of Commerce
-      and see how the chamber can help you.</h3>
-      <img class="banner" src="images/beach.jpg" alt="join photo">
-    </div>
-    <div id="spotlight1">
-        <span id="one"><p>Fire Safety Awareness</p>
-            <img src="images/view.jpg" alt="forest" class="center"></div>
-    <div id="spotlight2">
-        <span id="two"><p>DMV Registration</p>
-        <img src="images/art.jpg" alt="dmv" class="center"></div>
-    <div id="spotlight3">
-        <span id="three"><p>Apply for a permit</p>
-        <img src="images/thankyou.jpg" alt="thankyou" class="center"></div>
-  </main>
-  <footer class="footer">
-    <section>
-      <h6>Info</h6>
-      <div><img src="images/index.png" alt="2nd logo"></div>
+    <div class="event">
+      <h2>Upcoming Events</h2>
       <ul>
-        <li>
-        Flipton Chamber of Commerce<br>           
-        552 Flipton Way | Flipton Ohio, 44103<br>
-        fliptonchamber.org<br>
-        216-867-5309<br>
-        <br>
-      <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
-      <br>
-      © 2022 Flipton Chamber | Seth Markle | WDD 230 Project
-        </li>
+        <li>March 19th @ 2pm</li><br>
+        <img src="images/event.jpg" alt="event">
       </ul>
-    </section>
+      <p>Join us for a meet and greet fun walk.</p>
+    </div>
+    <div class="weather">
+      <h2>Todays Weather</h2>
+      <div class="temp-div">
+        <span id="temp"></span>°F
+      </div>
+      <div id="weather-type"></div>
+      <div id="weather-icon-div"></div>
+      <div>
+        <div class="windspeed-div">
+          Wind Speed: <span id="windspeed"></span> mph
+        </div>
+        <div class="windchill-div">
+          Wind Chill: <span id="windchill"></span><span id="windchill-F"></span>
+        </div>
+      </div>
+    </div>
+    <div class="news-release">
+      <h2>News</h2>
+      <p>We would like to thank all the donations for the spring fling backoff coming up on April 2nd.<br>
+      <br>
+      The yearly car show will take place at the expo center on April 8th at 2pm.</p>
+    </div>
+    <div class="spotlights">
+      <div class="spotlight1">
+        <a href="https://www.ohiobmv.gov//" target="_blank" class="company-site"><img src="images/ohiobmv.jpg" alt="dmv" class="spotlight-img"></a>
+        <div class="dmv info">
+          <p class="dmv message">Contact the DMV</p>
+          <p class="dmv phone">(844) 644-6268</p>
+          <p class="dmv address">8039 Euclid Ave, Flipton, OH 44103</p>
+        </div>
+      </div>
+      <div class="spotlight2">
+        <a href="https://www.redcross.org/get-help/how-to-prepare-for-emergencies/types-of-emergencies/fire.html" target="blank"><img src="images/firesafety.jpg" alt="forest" class="spotlight-img"></a>
+        <div class="rc info">
+          <p class="rc web"><a href="https://www.redcross.org/contact-us.html" target="blank" class="rc contact">Fire Safety/American Red Cross</a></p>
+        </div>
+      </div>
+      <div class="spotlight3">
+        <a href="https://www.sba.gov/business-guide/launch-your-business/apply-licenses-permits/" target="blank"><img src="images/permit.jpg" alt="thank you logo" class="spotlight-img"></a>
+        <div class="company-info">
+          <a href="https://www.sba.gov/business-guide/launch-your-business/apply-licenses-permits/" target="blank" class="company-site">Apply for a Permit</a>
+        </div>
+      </div>
+    </div>
+    <div class="join">
+      <div class="join-button">
+        <a href="join.html">Join Us!</a>
+      </div>
+      <p>Join the Flipton Chamber and discover how the chamber can help you today.</p>
+    </div>
+  </main>
+  <footer>
+    <img src="images/index.png" alt="chamber logo">
+    <div class="ftop">
+      <div class="ftopLeft">
+        <h2>Flipton</h2>
+        <p>601 Lakeside Ave</p>
+        <p>Flipton, OH 44114</p>
+      </div>
+      <div class="ftopRight">
+        <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
+        <p>fliptonchamber.org</p>
+        <p>216-867-5309</p>
+      </div>
+    </div>
+    <div class="fbottom">
+      <span>© Winter 2022</span> <span>Seth</span> <span>WDD 230</span>
+    </div>
   </footer>
-  <script>
-          var date = new Date();
-          document.getElementById("p1").innerHTML = date;
-  </script>
+</body>
+</html>
