--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,84 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Seth Markle">
-    <meta name="description" content="chamber page for wdd 230">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="../chamber/images/favicon.ico">
-    <link rel="stylesheet" href="../chamber/styles/normalize.css">
-    <link rel="stylesheet" href="../chamber/styles/small.css">
-    <link rel="stylesheet" href="../chamber/styles/medium.css">
-    <link rel="stylesheet" href="../chamber/styles/large.css">
-    <title>Flipton Business Directory Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flipton Directory Page</title>
+  <meta name="description" content="chamber of commerce site homepage">
+  <meta name="theme-color" content="rgb(22,61,90)">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;display=swap" rel="stylesheet">
+  <link rel="icon" href="../chamber/images/favicon.ico">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/larger.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans&amp;display=swap" rel="stylesheet">
 </head>
-<header>
-    <div class="main-logo">
-      <img src="../chamber/images/index.png" alt="logo">
-      <section>
-        <h1>Flipton Chamber of Commerce</h1>
-      </section>
-    </div>
-    <div class="social">
-      <a href="https://facebook.com" target="_blank"><img src="../chamber/images/fb.png" alt="fb icon"></a> <a href="https://www.linkedin.com/" target="_blank"><img src="../chamber/images/linkdin.jpg" alt="in icon"></a>
-    </div>
+<body>
+  <div class="viewport">
+    <hr>
+    <header>
+      <a href="/wdd230/chamber/index.html"><img class="logo" src="images/index.png" alt="logo"></a>
+      <div class="social">
+        <a href="https://facebook.com" target="_blank"><img class="social-logo" src="images/fb.png" alt="fb icon"></a> <a href="https://www.linkedin.com/" target="_blank"><img class="social-logo" src="images/linkdin.jpg" alt="in icon"></a>
+      </div>
+    </header>
     <div id="datebox">
-      <p id="p1"></p>
-      <script>
-            var date = new Date();
-            document.getElementById("p1").innerHTML = date;
-      </script>
+      <p id="p1"></p>      
     </div>
-    <nav>
-      <ul class="navigation">
-        <li>
-          <a id="menu"></a>
+    <nav id="mainnav">
+      <ul>
+        <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
+        <li class="active">
+          <a href="/chamber/chamber.html">Home</a>
         </li>
         <li>
-          <a href="../chamber/chamber.html">Home</a>
+          <a href="/chamber/directory.html">Directory</a>
         </li>
         <li>
-          <a href="../chamber/discover.html">Discover</a>
+          <a href="/chamber/discover.html">Discover</a>
         </li>
         <li>
-          <a href="../chamber/directory.html">Directory</a>
-        </li>
-        <li>
-          <a href="../chamber/join.html">Join</a>
+          <a href="/chamber/join.html">Join</a>
         </li>
       </ul>
     </nav>
-  </header>
-  <main id="directory">
-    <div class="menu">
-      <button id="grid">⏹️Grid</button> <button id="list">📄List</button>
-    </div>
-    <hr>
-    <article class="grid"></article>
-  </main>
-  <footer class="footer">
-    <section>
-      <h6>Info</h6>
-      <div><img src="images/index.png" alt="2nd logo"></div>
-      <ul>
-        <li>
-        Flipton Chamber of Commerce<br>           
-        552 Flipton Way | Flipton Ohio, 44103<br>
-        fliptonchamber.org<br>
-        216-867-5309<br>
-        <br>
-      <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
-      <br>
-      © 2022 Flipton Chamber | Seth Markle | WDD 230 Project
-        </li>
-      </ul>
-    </section>
-  </footer>
+    <main>
+      <h1>Chamber of Commerce Members</h1><button class="button" id="toggle">List View</button>
+      <div id="members" class="members">
+      </div>
+    </main>
+    <footer>
+      <div class="ftop">
+        <div class="ftopLeft">
+          <h2>Flipton</h2>
+          <p>601 Lakeside Ave</p>
+          <p>Flipton, OH 44114</p>
+        </div>
+        <div class="ftopRight">
+          <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
+          <p>fliptonchamber.org</p>
+          <p>216-867-5309</p>
+        </div>
+      </div>
+      <div class="fbottom">
+        <span>© Winter 2022</span> <span>Seth</span> <span>WDD 230</span>
+      </div>
+    </footer>
+  </div>
+  <script src="scripts/directory.js"></script>
   <script>
-          var date = new Date();
-          document.getElementById("p1").innerHTML = date;
-  </script>
+    var date = new Date();
+    document.getElementById("p1").innerHTML = date;
+</script>
+</body>
+</html>
