--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,98 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Seth Markle">
-    <meta name="description" content="chamber page for wdd 230">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="../chamber/images/favicon.ico">
-    <link rel="stylesheet" href="../chamber/styles/normalize.css">
-    <link rel="stylesheet" href="../chamber/styles/small.css">
-    <link rel="stylesheet" href="../chamber/styles/medium.css">
-    <link rel="stylesheet" href="../chamber/styles/large.css">
-    <link rel="stylesheet" href="../chamber/styles/discover.css">
-    <title>Flipton Chamber Discover Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flipton Discover Page</title>
+  <meta name="description" content="chamber of commerce site homepage">
+  <meta name="theme-color" content="rgb(22,61,90)">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;display=swap" rel="stylesheet">
+  <link rel="icon" href="../chamber/images/favicon.ico">
+  <link rel="stylesheet" href="../chamber/styles/normalize.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/larger.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans&amp;display=swap" rel="stylesheet">
 </head>
-<header>
-    <div class="main-logo">
-                <img src="../chamber/images/index.png" alt="logo">
-            </a>
-        <section>
-            <h1>Flipton Chamber of Commerce</h1>
-        </section>
-    </div>
-    <div class="social">
-        <a href="https://facebook.com" target="_blank">
-            <img src="../chamber/images/fb.png" alt="fb icon">
-        </a>
-        <a href="https://www.linkedin.com/" target="_blank">
-            <img src="../chamber/images/linkdin.jpg" alt="in icon">
-        </a>
-    </div>
-    <div id="datebox">
+<body>
+  <div class="viewport">
+    <hr>
+    <header>
+      <a href="/wdd230/chamber/index.html"><img class="logo" src="images/index.png" alt="logo"></a>
+      <div class="social">
+        <a href="https://facebook.com" target="_blank"><img class="social-logo" src="images/fb.png" alt="fb icon"></a> <a href="https://www.linkedin.com/" target="_blank"><img class="social-logo" src="images/linkdin.jpg" alt="in icon"></a>
+      </div>
+      <div id="datebox">
         <p id="p1"></p>
-        <script>
-            var date = new Date();
-            document.getElementById("p1").innerHTML = date;
-        </script>
-    </div>
-    <nav>
-        <ul class="navigation">
-            <li><a id="menu"></a></li>
-            <li><a href="../chamber/chamber.html">Home</a></li>
-            <li><a href="../chamber/discover.html">Discover</a></li>
-            <li><a href="../chamber/directory.html">Directory</a></li>
-            <li><a href="../chamber/join.html">Join</a></li>
-        </ul>
+      </div>
+    </header>
+    <nav id="mainnav">
+      <ul>
+        <li class="hamburger" id="menubutton"><img src="images/hamburger.png" alt="hamburger menu"></li>
+        <li class="active">
+          <a href="/chamber/chamber.html">Home</a>
+        </li>
+        <li>
+          <a href="/chamber/directory.html">Directory</a>
+        </li>
+        <li>
+          <a href="/chamber/discover.html">Discover</a>
+        </li>
+        <li>
+          <a href="/chamber/join.html">Join</a>
+        </li>
+      </ul>
     </nav>
-</header>
-        <picture>
-            <img src='../chamber/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Flipton Beach"/>
-            <P>Flipton Beach</P>
-        </picture>
-        <picture>
-            <img src='../chamber/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg" alt="Converted Train Station"/>
-            <P>Converted Train Station</P>
-        </picture>
-        <picture>
-            <img src='../chamber/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg" alt="The Great Outdoors"/>
-            <P>The Great Outdoors</P>
-        </picture>
-        <picture><img src='../chamber/images/station2jpg.jpg' data-src="/lesson7/images/station2jpg_300x400.jpg" alt="Old Train Station"/>
-            <P>Old Train Station</P>
-        </picture>
-        <picture>
-            <img src='../chamber/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg" alt="Thank You for Coming"/>
-            <P>Thank You for Coming</P>
-        </picture>
-        <picture>
-            <img src='../chamber/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg" alt="The Forest of Flipton"/>
-            <P>The Forest of Flipton</P>
-        </picture>
-        <script src="chamber/scripts/lazyscripts.js"></script>
-        <footer class="footer">
-            <section>
-              <h6>Info</h6>
-              <div><img src="images/index.png" alt="2nd logo"></div>
-              <ul>
-                <li>
-                Flipton Chamber of Commerce<br>           
-                552 Flipton Way | Flipton Ohio, 44103<br>
-                fliptonchamber.org<br>
-                216-867-5309<br>
-                <br>
-              <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
-              <br>
-              © 2022 Flipton Chamber | Seth Markle | WDD 230 Project
-                </li>
-              </ul>
-            </section>
-          </footer>
-          <script>
-                  var date = new Date();
-                  document.getElementById("p1").innerHTML = date;
-          </script>
+    <main>
+      <h1>Discover Flipton</h1>
+      <div class="sidebar">
+        <div class="left">
+          <div class="statistics">
+            <h2>Statistics</h2>
+            <p>Population: 81,009</p>
+            <p>Median Age: 36.3 Years</p>
+            <p>Median Household Income: $63,678</p>
+          </div>
+          <div class="events">
+            <h2>Upcoming Events</h2><a href="#">
+            <p class="event">March 25th</p>
+            <p>Come visit our updated art gallery? You sure can by stopping by and viewing work from our local artists.</p></a> <a href="#">
+            <p class="event">April 1st</p>
+            <p>Join us on the beach near the marine for a spring fling party. All are welcome and we have fun activites planned.</p></a> <a href="#">
+            <p class="event">April 8th</p>
+            <p>Come shop with us at shops at station square. We have all your shopping needs.</p></a> <a href="#">
+            <p class="event">April 15th</p>
+            <p>Our nature center has many trais and paths to take if you are looking for a relaxing afternoon.</p></a> <a href="#">
+            <p class="event">April 22nd</p>
+            <p>Visit Flipton Square where our old train station was converted into a food market place.</p></a> <a href="#">
+            <p class="event">April 29th</p>
+            <p>Our forest provide a breath taking experience for all ages. Check out our campground for our rates.</p></a>
+          </div>
+        </div>
+        <div class="right">
+          <div class="gallery">
+            <div class="galleryImage">
+              <img src="images/art.jpg" alt="gallery image 1" loading="lazy"> <span class="label">The Art Gallery</span>
+            </div>
+            <div class="galleryImage">
+              <img src="images/beach.jpg" alt="gallery image 2" loading="lazy"> <span class="label">The Beach</span>
+            </div>
+            <div class="galleryImage">
+              <img src="images/formerstation.jpg" alt="gallery image 3" loading="lazy"> <span class="label">The Shopping</span>
+            </div>
+            <div class="galleryImage">
+              <img src="images/outdoor.jpg" alt="gallery image 4" loading="lazy"> <span class="label">The Nature</span>
+            </div>
+            <div class="galleryImage">
+              <img src="images/station2jpg.jpg" alt="gallery image 5" loading="lazy"> <span class="label">The Food Market</span>
+            </div>
+            <div class="galleryImage">
+              <img src="images/view.jpg" alt="gallery image 6" loading="lazy"> <span class="label">The Forest</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+  <footer>
+    <img src="images/index.png" alt="chamber logo">
+    <div class="ftop">
+      <div class="ftopLeft">
+        <h2>Flipton</h2>
+        <p>601 Lakeside Ave</p>
+        <p>Flipton, OH 44114</p>
+      </div>
+      <div class="ftopRight">
+        <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
+        <p>fliptonchamber.org</p>
+        <p>216-867-5309</p>
+      </div>
+    </div>
+    <div class="fbottom">
+      <span>© Winter 2022</span> <span>Seth</span> <span>WDD 230</span>
+    </div>
+  </footer>
+  <script src="scripts/menu.js"></script> 
+  <script>
+
+
+    var date = new Date();
+    document.getElementById("p1").innerHTML = date;
+  </script>
+</body>
+</html>
