--- a/chamber/join.html
+++ b/chamber/join.html
@@ -11,51 +11,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="../chamber/images/favicon.ico">
     <link rel="stylesheet" href="../chamber/styles/normalize.css">
-    <link rel="stylesheet" href="../chamber/styles/small.css">
-    <link rel="stylesheet" href="../chamber/styles/medium.css">
-    <link rel="stylesheet" href="../chamber/styles/large.css">
-    <link rel="stylesheet" href="../chamber/styles/join.css">
+    <link rel="stylesheet" href="../chamber/styles/base.css">
+    <link rel="stylesheet" href="../chamber/styles/larger.css">
     <title>Flipton Chamber Join Page</title>
 </head>
 <header>
     <div class="main-logo">
       <img src="../chamber/images/index.png" alt="logo">
       <section>
-        <h1>Flipton Chamber of Commerce</h1>
+        <h1>Flipton Chamber Join Page</h1>
       </section>
     </div>
     <div class="social">
-      <a href="https://facebook.com" target="_blank"><img src="../chamber/images/fb.png" alt="fb icon"></a> <a href="https://www.linkedin.com/" target="_blank"><img src="../chamber/images/linkdin.jpg" alt="in icon"></a>
+      <a href="https://facebook.com" target="_blank">
+        <img src="../chamber/images/fb.png" alt="fb icon"></a> <a href="https://www.linkedin.com/" target="_blank"><img src="../chamber/images/linkdin.jpg" alt="in icon"></a>
     </div>
     <div id="datebox">
-      <p id="p1"></p>
-      <script>
-              var date = new Date();
-              document.getElementById("p1").innerHTML = date;
-      </script>
-    </div>
-    <nav>
-      <ul class="navigation">
-        <li>
-          <a id="menu"></a>
-        </li>
-        <li>
-          <a href="../chamber/chamber.html">Home</a>
-        </li>
-        <li>
-          <a href="../chamber/discover.html">Discover</a>
-        </li>
-        <li>
-          <a href="../chamber/directory.html">Directory</a>
-        </li>
-        <li>
-          <a href="../chamber/join.html">Join</a>
-        </li>
-      </ul>
-    </nav>
+      <p id="p1"></p>      
+    </div>    
   </header>
+  <nav id="mainnav">
+    <ul>
+      <li class="hamburger" id="menubutton">
+        <img src="images/hamburger.png" alt="hamburger menu"></li>
+      <li class="active">
+        <a href="/chamber/chamber.html">Home</a>
+      </li>
+      <li>
+        <a href="/chamber/directory.html">Directory</a>
+      </li>
+      <li>
+        <a href="/chamber/discover.html">Discover</a>
+      </li>
+      <li>
+        <a href="/chamber/join.html">Join</a>
+      </li>
+    </ul>
+  </nav>
   <main class="main-join">
-    <h1>How to join the Flipton Chamber of Commerce.</h1>
+    <h1>Sign up for the Flipton Chamber.</h1>
     <form class="form-join" method="get" action="thankyou.html">
       <label class="form_label" for="firstName">First Name *</label> <input type="text" id="firstName" name="firstName" required=""> <label class="form_label" for="lastName">Last Name *</label> <input type="text" id="lastName" name="lastName" required=""> <label class="form_label" for="businessPositionTitle">Business Position Title</label> <input type="text" id="businessPositionTitle" name="businessPositionTitle" pattern="[A-Za-z\s\-]{7,}"> <label class="form_label" for="email">Email *</label> <input type="email" id="email" name="email" placeholder="example@example.com" required=""> <label class="form_label" for="cellPhone">Cell Phone *</label> <input type="tel" id="cellPhone" name="cellPhone" required=""> <label class="form_label" for="businessNameTitle">Business Name/Title *</label> <input type="text" id="businessNameTitle" name="businessNameTitle" required=""> <label class="membership-level" for="membershipLevel">Membership Level *</label> <select id="membershipLevel" name="membershipLevel">
         <option value="NP Membership">
@@ -74,26 +68,29 @@
       <label class="form_label" for="businessDescription">Business Description</label> <input type="hidden" id="date" name="date" value="CurrentTime"> <input type="hidden" id="time" name="time" value="CurrentDate">
     </form>
   </main>
-  <footer class="footer">
-    <section>
-      <h6>Info</h6>
-      <div><img src="images/index.png" alt="2nd logo"></div>
-      <ul>
-        <li>
-        Flipton Chamber of Commerce<br>           
-        552 Flipton Way<br>
-        Flipton Ohio, 44103<br>
-        fliptonchamber.org<br>
-        216-867-5309<br>
-        <br>
-      <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
-      <br>
-      © 2022 Flipton Chamber | Seth Markle | WDD 230 Project
-        </li>
-      </ul>
-    </section>
-  </footer>
-  <script>
-          var date = new Date();
-          document.getElementById("p1").innerHTML = date;
-  </script>
+  <footer>
+    <div class="ftop">
+        <div class="ftopLeft">
+            <h2>Flipton</h2>
+            <p>601 Lakeside Ave</p>
+            <p>Flipton, OH 44114</p>
+        </div>
+        <div class="ftopRight">
+            <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
+            <p>fliptonchamber.org</p>
+            <p>216-867-5309</p>
+        </div>
+    </div>
+    <div class="fbottom">
+        <span>© Winter 2022</span>
+        <span>Seth</span>
+        <span>WDD 230</span>
+    </div>
+</footer>
+</div>
+<script>
+  var date = new Date();
+  document.getElementById("p1").innerHTML = date;
+</script>
+</body>
+</html>
