--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -57,7 +57,7 @@
   </header>
   <main class="home-grid">
     <div class="hero">
-      <img src="../images/wdd230-org.jpg" alt="wdd230-org">
+      <img src="/images/wdd230-org.jpg" alt="wdd230-org">
       <div class="join-button">
         <a href="join.html">Join the Chamber</a>
       </div>
