--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -39,16 +39,16 @@
       <nav>
         <ul id="primaryNav">
           <li>
-            <a href="chamber/chamber.html">Home</a>
+            <a href="wdd230/chamber/chamber.html">Home</a>
           </li>
           <li>
-            <a href="chamber/directory.html">Directory</a>
+            <a href="wdd230/chamber/directory.html">Directory</a>
           </li>
           <li>
-            <a href="chamber/discover.html">Discover</a>
+            <a href="wdd230/chamber/discover.html">Discover</a>
           </li>
           <li>
-            <a href="chamber/join.html">Join</a>
+            <a href="wdd230/chamber/join.html">Join</a>
           </li>
         </ul>
       </nav>
