--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -39,16 +39,16 @@
       <nav>
         <ul id="primaryNav">
           <li>
-            <a href="wdd230/chamber.html">Home</a>
+            <a href="chamber.html">Home</a>
           </li>
           <li>
-            <a href="wdd230/directory.html">Directory</a>
+            <a href="directory.html">Directory</a>
           </li>
           <li>
-            <a href="wdd230/discover.html">Discover</a>
+            <a href="discover.html">Discover</a>
           </li>
           <li>
-            <a href="wdd230/join.html">Join</a>
+            <a href="join.html">Join</a>
           </li>
         </ul>
       </nav>
