--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,16 +32,16 @@
       <ul>
         <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
         <li class="active">
-          <a href="chamber/chamber.html">Home</a>
+          <a href="/chamber/chamber.html">Home</a>
         </li>
         <li>
-          <a href="chamber/directory.html">Directory</a>
+          <a href="/chamber/directory.html">Directory</a>
         </li>
         <li>
-          <a href="chamber/discover.html">Discover</a>
+          <a href="/chamber/discover.html">Discover</a>
         </li>
         <li>
-          <a href="chamber/join.html">Join</a>
+          <a href="/chamber/join.html">Join</a>
         </li>
       </ul>
     </nav>
