--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,16 +32,16 @@
       <ul>
         <li class="hamburger" id="menubutton"><img src="images/hamburger.png" alt="hamburger menu"></li>
         <li class="active">
-          <a href="/chamber.html">Home</a>
+          <a href="../chamber.html">Home</a>
         </li>
         <li>
-          <a href="/directory.html">Directory</a>
+          <a href="../directory.html">Directory</a>
         </li>
         <li>
-          <a href="/discover.html">Discover</a>
+          <a href="../discover.html">Discover</a>
         </li>
         <li>
-          <a href="/join.html">Join</a>
+          <a href="../join.html">Join</a>
         </li>
       </ul>
     </nav>
