--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li>Lesson 10: <a href="lesson10/weatherapi.html">Weather API Test</a></li>
                 <li>Lesson 10: <a href="chamber/chamber.html">Using the Weather API</a></li>
                 <li>Lesson 11: <a href="chamber/chamber.html">The Chamber of Commerce Site</a></li>
-                <li>Lesson 14: <a href="..final.html">Bountiful Foods</a></li>
+                <li>Lesson 14: <a href="final/home.html">Bountiful Foods</a></li>
             </ul>
         </main>
         <footer class="footer">
