--- a/final/home.html
+++ b/final/home.html
@@ -8,8 +8,8 @@
     <title>Bountiful Foods</title>
     <meta name="description" content="Final Website">
     <meta name="author" content="Seth Markle">
-    <link rel="stylesheet" href="/final/css/little.css">
-    <link rel="stylesheet" href="/final/css/big.css">
+    <link rel="stylesheet" href="../final/css/little.css">
+    <link rel="stylesheet" href="../final/css/big.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
