--- a/final/home.html
+++ b/final/home.html
@@ -32,9 +32,9 @@
         </header>
         <nav id="mainnav">
             <ul>
-                <li class="menuItem"><a href="/final/home.html">Home</a></li>
-                <li class="menuItem"><a href="/final/fresh.html">Fresh</a></li>
-                <li class="menuItem"><a href="/final/aboutus.html">About Us</a></li>
+                <li class="menuItem"><a href="../final/home.html">Home</a></li>
+                <li class="menuItem"><a href="../final/fresh.html">Fresh</a></li>
+                <li class="menuItem"><a href="../final/aboutus.html">About Us</a></li>
             </ul>
         </nav>
         <main>
