--- a/final/fresh.html
+++ b/final/fresh.html
@@ -8,8 +8,8 @@
     <title>Bountiful Foods</title>
     <meta name="description" content="Final Website">
     <meta name="author" content="Seth Markle">
-    <link rel="stylesheet" href="/final/css/little.css">
-    <link rel="stylesheet" href="/final/css/big.css">
+    <link rel="stylesheet" href="../final/css/little.css">
+    <link rel="stylesheet" href="../final/css/big.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
@@ -32,9 +32,9 @@
         </header>
         <nav id="mainnav">
             <ul>
-                <li class="menuItem"><a href="/final/home.html">Home</a></li>
-                <li class="menuItem"><a href="/final/fresh.html">Fresh</a></li>
-                <li class="menuItem"><a href="/final/aboutus.html">About Us</a></li>
+                <li class="menuItem"><a href="../final/home.html">Home</a></li>
+                <li class="menuItem"><a href="../final/fresh.html">Fresh</a></li>
+                <li class="menuItem"><a href="../final/aboutus.html">About Us</a></li>
             </ul>
         </nav>
         <main>
