--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <footer class="footer">
             <h2>Last Updated</h2>
             <p>
-                &copy; Winter Term 2022 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
+                &copy; Fall Term 2023 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
             </p>
             <p class="last-update" id="lastModified"></p>
             <p id="p1"></p>
