--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="chamber/styles/medium.css">
     <link rel="stylesheet" href="chamber/styles/large.css">
     <link rel="stylesheet" href="chamber/styles/normalize.css">
-    <title>Seth Markle's Assignment Portal</title>
+    <title>Seth Markle - WDD 230 - Web Frontend Development</title>
 </head>
 <body>    
         <header>
