--- a/lesson3/sitemap.html
+++ b/lesson3/sitemap.html
@@ -40,7 +40,7 @@
                 </body>
             <footer class="footer">
                 <p>
-                    &copy; Winter Term 2022 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
+                    &copy; Fall Term 2023 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
                 </p>
                 <p class="last-update" id="lastModified"></p>
             </footer>
