--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="WDD 230 - Web Frontend Development">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="home page setup for wdd 230">
+    <meta name="description" content="course assignment portal">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
@@ -28,6 +29,22 @@
                 <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
             </ul>
         </main>
+        <nav>
+            <ul id="primaryNav">
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="chamber/siteplan.html">Site Plan</a>
+                </li>
+                <li>
+                  <a href="chamber/">BYU-Idaho</a>
+                </li>
+                <li>
+                  <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
+                </li>
+              </ul>
+        </nav>
         <footer class="footer">
             <h2>Last Updated</h2>
             <p>
