--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="WDD 230 - Web Frontend Development">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="course assignment portal">
+    <meta name="description" content="WDD 230 - Web Frontend Development - Portal Homepage">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
