--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
             <main>
             <h2>WDD 230: Web Frontend Development</h2>
             <section>
-
+              .card {
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+                max-width: 300px;
+                margin: auto;
+                text-align: center;
+                font-family: arial;
+              }
             </section>
             <h3>Learning Activites</h3>
             <ul>
