--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <section>
               <div class="card"
               <h3>Information</h3>
-              
+
             </section>
             <ul>
                 <li>Lesson 2: <a href="lesson2/designprinciples.html">Design Principles Document</a></li>
@@ -61,7 +61,7 @@
             </ul>
         </main>
         <footer class="footer">
-            <h3>Last Updated</h3>
+            <p>Last Updated</p>
             <p>
                 &copy; Fall Term 2023 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
             </p>
