--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-linkedin"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
-                <p><button>Contact</button></p>
               </div>
             </section>
             <section>
-              <div class="card"
-              <h3>Information</h3>
-
+              <div class="card">
+                <h3>Information</h3>
+              </div>
             </section>
             <ul>
                 <li>Lesson 2: <a href="lesson2/designprinciples.html">Design Principles Document</a></li>
@@ -71,5 +70,8 @@
                 document.getElementById("p1").innerHTML = date;
             </script>
         </footer>
+        <script>
+
+        </script>
     </body>
     </html>
