--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
             <section>
               <div class="card">
                 <h3>Learning Activites</h3>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="lesson2/designprinciples.html"><i class="fa fa-dribbble"></i></a>
+                <a href="lesson3/index.html"><i class="fa fa-twitter"></i></a>
+                <a href="chamber/index.html"><i class="fa fa-linkedin"></i></a>
               </div>
             </section>
             <section>
