--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -21,19 +21,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="target-audience.html">Target Audience and Scenarios</a>
-                    </li>
-                    <li>
-                        <a href="sitemap.html">Site Map</a>
-                    </li>
-                    <li>
-                        <a href="colorscheme.html">Color Scheme</a>
-                    </li>
-                    <li>
-                        <a href="typography.html">Typography</a>
+                        <a href="/index.html">Home</a>
                     </li>
                 </ul>
             </nav>
@@ -54,7 +42,10 @@
                 </section>
                 <section class="scenarios">
                     <h3>Scenarios</h3>
-                    <p></p>
+                    <p>Since this is a small town there will be simple things for events.  A bake sale, a charity walk, and perhaps a firemans parade.
+                       There will be some sort of directory for the important postions in town.  I will provide some sort of scale reguarding age or
+                       population as I have not decided yet.
+                    </p>
                 </section>
                 <section class="color">
                     <h3>Color Schema</h3>
@@ -78,7 +69,6 @@
             </p>
             <p class="last-update" id="lastModified"></p>
         </footer>
-        <h2>Last Updated</h2>
         <p id="p1"></p>
         <script>
             var date = new Date();
