--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
                   <a href="lesson03/chamber-site-plan.html">Website Planning Document</a>
                 </li>
                 <li>
-                <a href="chamber/index.html">Chamber Home Page Build</a>
+                  <a href="chamber/index.html">Chamber Home Page Build</a>
                 </li>
-              </div>
+                <li>
+                  <a href="lesson05/bom.html">DOM Manipulation</a>
+                </li>
+                </div>
             </section>
             <section>
               <div class="card">
