--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seth Markle">
     <meta name="description" content="home page setup for wdd 230">
+    <meta name="tittle" content="website planning">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/normalization.css">
@@ -15,7 +16,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Website Planning Document</h1>
+            <h1>Site Plan</h1>
         </header>
         <main>
             <nav>
@@ -59,7 +60,7 @@
                 </section>
                 <section class="wireframe">
                     <h3>Wireframe</h3>
-                    <p></p>
+                    <p>https://wireframe.cc/iSQoua</p>
                 </section>
             </article>
         </main>
