--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,10 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="/chamber/styles/normalize.css">
-    <link rel="stylesheet" href="/chamber/styles/small.css">
+    <link rel="stylesheet" href="/chamber/styles/base.css">
     <link rel="stylesheet" href="/chamber/styles/medium.css">
-    <link rel="stylesheet" href="/chamber/styles/large.css">
+    <link rel="stylesheet" href="/chamber/styles/larger.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
@@ -22,7 +21,7 @@
                 <img src="/chamber/images/index.png" alt="logo">
             </a>
         <section>
-            <h1>Flipton Chamber of Commerce</h1>
+            <h1>Hudson Chamber of Commerce</h1>
         </section>
     </div>
     <div class="social">
@@ -43,15 +42,13 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="..chamber/index.html">Home</a></li>
-            <li><a href="..chamber/discover.html">Discover</a></li>
-            <li><a href="..chamber/directory.html">Directory</a></li>
-            <li><a href="..chamber/join.html">Join</a></li>
+            <li><a href="/index.html">Home</a></li>
         </ul>
     </nav>
 </header>
 <main>
-    <div id="hero">Hero image and call to action</div>
+    <div id="hero">Hero Image</div>
+    <div id="action">Call to Action</div>
     <div id="event">Events</div>
     <div id="weather">Weather</div>
     <div id="join">Join Us</div>
@@ -69,23 +66,22 @@
             <img src="/chamber/images/index.png" alt="2nd logo">
         </div>
         <ul>
-            <li><h2>Flipton Chamber of Commerce</h2></li>
-            <li><p>552 Flipton Way</p></li>
-            <li><p>Flipton Ohio, 44103</p></li>
+            <li><h2>Hudson Chamber of Commerce</h2></li>
+            <li><p>27 E Main St.</p></li>
+            <li><p>Hudson, OH 44236</p></li>
         </ul>
     </section>
     <section>
-        <p>fliptonchamber.org
-        <p>216-867-5309
-        <p><a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a></p>
+        <p>hudsonchamber.org
+        <p>(330)-650-0621
+        <p><a href="https://www.google.com/maps/place/Hudson,+OH/@41.2400538,-81.5229622,12z/data=!3m1!4b1!4m6!3m5!1s0x8830d9cbde853a35:0x917582c24ff9d7ad!8m2!3d41.240056!4d-81.440667!16zL20vMHoyMnk?entry=ttu">Find us here!</a></p>
     </section>
     <hr>
     <section>
         <h6>Info</h6>
-        <p>&copy;<span id="currentyear"></span> 2022 Flipton Chamber
+        <p>&copy;<span id="currentyear"></span> 2023 Hudson Chamber
             <a>|</a><br> Seth Markle
-            <a>|</a><br>WDD 230 Project
-            <a>|</a><br>Last Modification:         
+            <a>|</a><br>WDD 230 Project    
             <p id="p1"></p>
             <script>
                 var date = new Date();
