--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <h1>Seth Markle</h1>
             </header>
             <main>
+              <div class="hero2">
+                <picture>
+                  <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/columbus-ohio/400x250/columbus-temple-lds-408057-wallpaper.jpg" alt="Columbus Temple - 2022">
+                </picture>
+                <div class="herotemple">
+                  <p>Columbus Temple</p>
+                </div>
+              </div>
             <h2>WDD 230: Web Frontend Development</h2>
             <section>
               <div class="card">
