--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -15,7 +15,7 @@
     <div class="container">
         <header>
             <h1>Seth Markle</h1>
-            <a href="index.html">Home</a>
+            <a href="/index.html">Home</a>
         </header>
         <main>
             <h1>Design Principles</h1>
