--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,7 +64,7 @@
 <footer>
     <section>
         <div>
-            <img src="/chamber/images/hero.jpg" alt="2nd logo">
+            <img src="../chamber/images/hero.jpg" alt="2nd logo">
         </div>
         <ul>
             <li><h2>Hudson Chamber of Commerce</h2></li>
