--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,10 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="/chamber/normalize.css">
-    <link rel="stylesheet" href="/chamber/styles/base.css">
-    <link rel="stylesheet" href="/chamber/styles/medium.css">
-    <link rel="stylesheet" href="/chamber/styles/larger.css">
+    <link rel="stylesheet" href="../chamber/normalize.css">
+    <link rel="stylesheet" href="../chamber/styles/base.css">
+    <link rel="stylesheet" href="../chamber/styles/medium.css">
+    <link rel="stylesheet" href="../chamber/styles/larger.css">
     <title>Hudson Chamber of Commerce</title>
 </head>
 <header>
