--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="/chamber/images/favicon.ico">
+    <link rel="icon" href="../chamber/images/favicon.ico">
     <link rel="stylesheet" href="../chamber/normalize.css">
     <link rel="stylesheet" href="../chamber/styles/base.css">
     <link rel="stylesheet" href="../chamber/styles/medium.css">
