--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,9 +66,9 @@
             <img src="../chamber/images/hero.jpg" alt="2nd logo">
         </div>
         <ul>
-            <li><h2>Hudson Chamber of Commerce</h2></li>
-            <li><p>27 E Main St.</p></li>
-            <li><p>Hudson, OH 44236</p></li>
+            <h2>Hudson Chamber of Commerce</h2>
+            <p>27 E Main St.</p>
+            <p>Hudson, OH 44236</p>
         </ul>
     </section>
     <section>
