--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,11 +65,11 @@
         <div>
             <img src="../chamber/images/hero.jpg" alt="2nd logo">
         </div>
-        <ul>
+        <section>
             <h2>Hudson Chamber of Commerce</h2>
             <p>27 E Main St.</p>
             <p>Hudson, OH 44236</p>
-        </ul>
+        </section>
     </section>
     <section>
         <p>hudsonchamber.org
@@ -79,8 +79,8 @@
     <hr>
     <section>
         <p>&copy;<span id="currentyear"></span> 2023 Hudson Chamber
-            <a>|</a><br> Seth Markle
-            <a>|</a><br>WDD 230 Project    
+            <br> Seth Markle
+            <br>WDD 230 Project    
             <p id="p1"></p>
             <p class="last-update" id="lastModified"></p>
             <p id="p1"></p>
