--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,10 +18,9 @@
     <title>Hudson Chamber of Commerce</title>
 </head>
 <header>
-    <div class="main-logo">
-            <a href="/chamber/index.html">
+    <div class="header-grid">
+        <div class="header-img-div"></div>
                 <img src="../chamber/images/hero.jpg" alt="logo">
-            </a>
         <section>
             <h1>Hudson Chamber of Commerce</h1>
         </section>
@@ -30,9 +29,14 @@
         <a href="https://facebook.com" target="_blank">
             <img src="../chamber/images/fb.png" alt="fb icon">
         </a>
+    </div> 
+    <div class="social">   
         <a href="https://www.linkedin.com/" target="_blank">
             <img src="../chamber/images/linkdin.jpg" alt="in icon">
         </a>
+    </div>
+    <div>
+        <button id="hamburgerBtn"></button>
     </div>
 </header>
     <body>
@@ -48,7 +52,6 @@
             <li><a href="../index.html">Home</a></li>
         </ul>
     </nav>
-
 <main>
     <div id="hero">Hero Image</div>
     <div id="action">Call to Action</div>
