--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <meta property="og:title" content="chamber of commerce">
-    <meta property="og:description" content="chamver layout for wdd 230">
+    <meta property="og:description" content="chamber layout for wdd 230">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="">
+    <meta property="og:type" content="website">
     <link rel="icon" href="../chamber/images/favicon.ico">
     <link rel="stylesheet" href="../chamber/styles/base.css">
     <link rel="stylesheet" href="../chamber/styles/larger.css">
