--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <meta property="og:title" content="chamber of commerce">
     <meta property="og:description" content="chamber layout for wdd 230">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="">
+    <meta property="og:image" content="https://byui-cse.github.io/wdd230-course/images/l06/wdd230-org.jpg">
+    <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
     <meta property="og:type" content="website">
     <link rel="icon" href="../chamber/images/favicon.ico">
     <link rel="stylesheet" href="../chamber/styles/base.css">
