--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" href="../chamber/images/favicon.ico">
     <link rel="stylesheet" href="../chamber/styles/base.css">
     <link rel="stylesheet" href="../chamber/styles/larger.css">
+    <link rel="stylesheet" href="../chamber/styles/normalization.css">
     <title>Hudson Chamber of Commerce</title>
 </head>
 <header>
