--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <meta property="og:title" content="chamber of commerce">
     <meta property="og:description" content="chamber layout for wdd 230">
-    <meta property="og:image" content="https://byui-cse.github.io/wdd230-course/images/l06/wdd230-org.jpg">
+    <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/index.html">
     <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
     <meta property="og:type" content="website">
     <link rel="icon" href="../chamber/images/favicon.ico">
@@ -50,7 +50,7 @@
     </nav>
         <main class="home-grid">
             <div class="hero">
-                <img src="images/wdd230-org.jpg" alt="wdd230-org">
+                <img src="images/wdd230-org.webp" alt="wdd230-org">
                 <div class="join-button">
                     <a href="join.html">Join the Chamber</a>
                   </div>    
