--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,7 +50,7 @@
     </nav>
         <main class="home-grid">
             <div class="hero">
-                <img src="images/wdd230-org.webp" alt="wdd230-org">
+                <img srcset="images/wdd230-org.webp" alt="wdd230-org">
                 <div class="join-button">
                     <a href="join.html">Join the Chamber</a>
                   </div>    
@@ -59,7 +59,7 @@
                 <h2>Upcoming Events</h2>
                 <ul>
                   <li>November 19th @ 2pm</li><br>
-                  <img src="images/event.jpg" alt="event">
+                  <img srcset="images/event.jpg" alt="event">
                 </ul>
                 <p>Join us for a meet and greet fun walk.</p>
               </div>
