--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,7 +59,7 @@
                 <h2>Upcoming Events</h2>
                 <ul>
                   <li>November 19th @ 2pm</li><br>
-                  <img srcset="images/event.jpg" alt="event">
+                  <img srcset="images/event.webp" alt="event">
                 </ul>
                 <p>Join us for a meet and greet fun walk.</p>
               </div>
@@ -127,7 +127,7 @@
 <footer>
   <section>
       <div>
-          <img src="../chamber/images/hero.jpg" alt="2nd logo">
+          <img srcset="../chamber/images/hero.webp" alt="2nd logo">
       </div>
       <section>
           <h2>Hudson Chamber of Commerce</h2>
